# modulartex

./: .gitignore  CMakeLists.txt  Makefile  README.rst  _config.yml  about.html  index.html  labreport.sty  main.tex
_layouts/: default.html  page.html
cmake/: LaTeXBuild.cmake
gp/: adcTemp.gp
proj/: CMakeLists.txt  main.tex
proj/sty/: customRefs.sty  customSty.sty
proj/tex/: proj.tex
proj1/: CMakeLists.txt  main.tex
skel/: CMakeLists.txt
skel/proj/: CMakeLists.txt  main.tex
skel/proj/tex/: proj.tex
tex/: conclusion.tex  intro.tex  main.tex  methods.tex  results.tex
